<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Calevent</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="alert">Alert</string>
    <string name="no_nfc">The device does not has NFC hardware</string>
    <string name="no_beam">Android Beam is not supported</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="hello_world">Hello world!</string>
    <string name="share">Share</string>
    <string name="find">Find</string>
    <string name="share_dscrpt">Share one or more events to friend</string>
    <string name="find_dscrpt">Find a common avalaible timeslot with friend</string>
    
    <string name="home">Home</string>
    <string name="newEvent">New Event</string>
    <string name="inbox">Inbox</string>
    <string name="info">Info</string>
    
    <string name="nullString"></string>
    <string name="textOn">&#160;</string>
    <string name="textOff">&#160;</string>
    <string name="fiveSpaces">&#160;&#160;&#160;&#160;&#160;</string>
    
    <string name="sun">Sun</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    
    <string name="time12am">12 am</string>
    <string name="time1am">1 am</string>
    <string name="time2am">2 am</string>
    <string name="time3am">3 am</string>
    <string name="time4am">4 am</string>
    <string name="time5am">5 am</string>
    <string name="time6am">6 am</string>
    <string name="time7am">7 am</string>
    <string name="time8am">8 am</string>
    <string name="time9am">9 am</string>
    <string name="time10am">10 am</string>
    <string name="time11am">11 am</string>
    <string name="time12pm">12 pm</string>
    <string name="time1pm">1 pm</string>
    <string name="time2pm">2 pm</string>
    <string name="time3pm">3 pm</string>
    <string name="time4pm">4 pm</string>
    <string name="time5pm">5 pm</string>
    <string name="time6pm">6 pm</string>
    <string name="time7pm">7 pm</string>
    <string name="time8pm">8 pm</string>
    <string name="time9pm">9 pm</string>
    <string name="time10pm">10 pm</string>
    <string name="time11pm">11 pm</string>
    
    <string name="updating">updating</string>
    <string name="share_mode">Share mode</string>
    <string name="find_mode">Find mode</string>
    <string name="home_on_tab">Home</string>
    <string name="new_on_tab">Create new event</string>
    <string name="inbox_on_tab">Inbox</string>
    <string name="info_on_tab">Select calendars</string> 
    <string name="select_to_be_written_calendar">Select your calendar to be written</string>
    

</resources>
