<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".HomeActivity" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:background="@color/bg_app_main"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/control_layout"
            android:layout_width="fill_parent"
            android:layout_height="160dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/toggle_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:orientation="horizontal" >
                 
                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:text="@string/share"
                    android:textColor="@color/black"
                    android:typeface="sans"
                    android:textStyle="bold"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
                
                <Switch
                    android:id="@+id/switch_mode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textOn="@string/nullString"
                    android:textOff="@string/nullString"
                    android:thumbTextPadding="22dp"
                    android:track="@drawable/toggle_bg"
                    android:thumb="@drawable/toggle_button" />
                
                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/find"
                    android:textColor="@color/black"
                    android:typeface="sans"
                    android:textStyle="bold"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
                
            </LinearLayout>
            
            <LinearLayout
                android:id="@+id/toggle_dscrpt_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:orientation="horizontal" >
                 <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:text="@string/share_dscrpt"
                    android:textColor="@color/black"
                    android:typeface="sans"
                    android:textStyle="italic"
                    android:textSize="13dp"
                    android:textAppearance="?android:attr/textAppearanceMedium" 
                    android:gravity="right"
                    android:layout_weight="1"/>
                  <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/find_dscrpt"
                    android:textColor="@color/black"
                    android:typeface="sans"
                    android:textStyle="italic"
                    android:textSize="13dp"
                    android:textAppearance="?android:attr/textAppearanceMedium" 
                    android:gravity="left"
                    android:layout_weight="1"/>
              </LinearLayout>
              
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/calendar_layout"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_below="@id/control_layout"
            android:layout_centerHorizontal="true" >

            <LinearLayout
                android:id="@+id/calendar_layout_month"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_alignParentBottom="true"
                android:layout_below="@id/control_layout"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="0dp"
                android:orientation="vertical" >

                <CalendarView
                    android:id="@+id/calendar_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="8dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/calendar_layout_week"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_alignParentBottom="true"
                android:layout_below="@id/control_layout"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="0dp"
                android:orientation="vertical" >

                <include
                    layout="@layout/calendar_week_view" />

            </LinearLayout>
        </RelativeLayout>
        
</RelativeLayout>

</RelativeLayout>
